JumpScript/tests/baselines/reference/importAsBaseClass.errors.txt
tests/cases/compiler/importAsBaseClass_1.jump(2,21): error TS2507: Type 'typeof "tests/cases/compiler/importAsBaseClass_0"' is not a constructor function type.


==== tests/cases/compiler/importAsBaseClass_1.jump (1 errors) ====
    import Greeter = require("./importAsBaseClass_0");
    class Hello extends Greeter { }
                        ~~~~~~~
!!! error TS2507: Type 'typeof "tests/cases/compiler/importAsBaseClass_0"' is not a constructor function type.
    
==== tests/cases/compiler/importAsBaseClass_0.jump (0 errors) ====
    export class Greeter {
       greet() { return 'greet' }
    }
    